@@ -1,6 +1,8 @@
 package gov.cdc.usds.simplereport.utils;
 
 import static gov.cdc.usds.simplereport.api.converter.FhirConstants.DEFAULT_COUNTRY;
+import static gov.cdc.usds.simplereport.utils.DateTimeUtils.DATE_TIME_FORMATTER;
+import static gov.cdc.usds.simplereport.utils.DateTimeUtils.convertToZonedDateTime;
 import static gov.cdc.usds.simplereport.validators.CsvValidatorUtils.getIteratorForCsv;
 import static gov.cdc.usds.simplereport.validators.CsvValidatorUtils.getNextRow;
 import static java.util.Collections.emptyList;
@@ -11,6 +13,7 @@ import com.fasterxml.jackson.databind.MappingIterator;
 import gov.cdc.usds.simplereport.api.Translators;
 import gov.cdc.usds.simplereport.api.converter.ConvertToObservationProps;
 import gov.cdc.usds.simplereport.api.converter.ConvertToPatientProps;
+import gov.cdc.usds.simplereport.api.converter.ConvertToSpecimenProps;
 import gov.cdc.usds.simplereport.api.converter.CreateFhirBundleProps;
 import gov.cdc.usds.simplereport.api.converter.FhirConverter;
 import gov.cdc.usds.simplereport.api.model.errors.CsvProcessingException;
@@ -22,13 +25,10 @@ import gov.cdc.usds.simplereport.db.model.auxiliary.PersonName;
 import gov.cdc.usds.simplereport.db.model.auxiliary.PhoneType;
 import gov.cdc.usds.simplereport.db.model.auxiliary.StreetAddress;
 import gov.cdc.usds.simplereport.db.model.auxiliary.TestCorrectionStatus;
-import gov.cdc.usds.simplereport.service.ResultsUploaderDeviceValidationService;
+import gov.cdc.usds.simplereport.service.ResultsUploaderCachingService;
 import java.io.InputStream;
 import java.time.LocalDate;
-import java.time.LocalDateTime;
-import java.time.format.DateTimeFormatter;
 import java.time.format.DateTimeParseException;
-import java.time.temporal.TemporalAccessor;
 import java.util.ArrayList;
 import java.util.Date;
 import java.util.HashMap;
@@ -38,7 +38,6 @@ import java.util.Objects;
 import java.util.UUID;
 import java.util.concurrent.CompletableFuture;
 import java.util.concurrent.ExecutionException;
-import java.util.stream.Collectors;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.apache.commons.lang3.StringUtils;
@@ -56,12 +55,11 @@ import org.springframework.stereotype.Component;
 public class BulkUploadResultsToFhir {
 
   private static final String ALPHABET_REGEX = "^[a-zA-Z\\s]+$";
-  private static final String SNOMED_REGEX = "(^[0-9]{9}$)|(^[0-9]{15}$)";
-  private final ResultsUploaderDeviceValidationService resultsUploaderDeviceValidationService;
+  private static final String SNOMED_REGEX = "(^\\d{9}$)|(^\\d{15}$)";
+  private final ResultsUploaderCachingService resultsUploaderCachingService;
   private final GitProperties gitProperties;
   private final UUIDGenerator uuidGenerator;
   private final DateGenerator dateGenerator;
-  private final ZoneIdGenerator zoneIdGenerator;
   private final FhirConverter fhirConverter;
 
   @Value("${simple-report.processing-mode-code:P}")
@@ -111,34 +109,28 @@ public class BulkUploadResultsToFhir {
       futureTestEvents.add(future);
     }
 
-    return futureTestEvents.stream()
-        .map(
-            future -> {
-              try {
-                return future.get();
-              } catch (InterruptedException | ExecutionException e) {
-                log.error("Bulk upload failure to convert to fhir.", e);
-                Thread.currentThread().interrupt();
-                throw new CsvProcessingException("Unable to process file.");
-              }
-            })
-        .collect(Collectors.toList());
+    List<String> bundles =
+        futureTestEvents.stream()
+            .map(
+                future -> {
+                  try {
+                    return future.get();
+                  } catch (InterruptedException | ExecutionException e) {
+                    log.error("Bulk upload failure to convert to fhir.", e);
+                    Thread.currentThread().interrupt();
+                    throw new CsvProcessingException("Unable to process file.");
+                  }
+                })
+            .toList();
+
+    // Clear cache to free memory
+    resultsUploaderCachingService.clearAddressTimezoneLookupCache();
+
+    return bundles;
   }
 
   private Bundle convertRowToFhirBundle(TestResultRow row, UUID orgId) {
-    DateTimeFormatter dateTimeFormatter = DateTimeFormatter.ofPattern("M/d/yyyy[ HH:mm]");
-
     var testEventId = row.getAccessionNumber().getValue();
-
-    LocalDateTime testResultDate;
-    TemporalAccessor temporalAccessor =
-        dateTimeFormatter.parseBest(
-            row.getTestResultDate().getValue(), LocalDateTime::from, LocalDate::from);
-    if (temporalAccessor instanceof LocalDateTime) {
-      testResultDate = (LocalDateTime) temporalAccessor;
-    } else {
-      testResultDate = ((LocalDate) temporalAccessor).atStartOfDay();
-    }
 
     var patientAddr =
         new StreetAddress(
@@ -165,6 +157,43 @@ public class BulkUploadResultsToFhir {
             row.getOrderingProviderZipCode().getValue(),
             null);
 
+    // Must be zoned because DateTimeType fields on FHIR bundle objects require
+    // a Date as a specific moment of time. Otherwise, parsing the string to a
+    // LocalDateTime cannot accurately place it on a timeline because there is
+    // no way to know if 00:00 refers to 12am ET or 12am PT or 12am UTC, each of
+    // which is a different moment of time and potentially even a different day
+    var testResultDate =
+        convertToZonedDateTime(
+            row.getTestResultDate().getValue(), resultsUploaderCachingService, testingLabAddr);
+
+    var orderTestDate =
+        convertToZonedDateTime(
+            row.getOrderTestDate().getValue(), resultsUploaderCachingService, providerAddr);
+
+    var specimenCollectionDate =
+        StringUtils.isNotBlank(row.getSpecimenCollectionDate().getValue())
+            ? convertToZonedDateTime(
+                row.getSpecimenCollectionDate().getValue(),
+                resultsUploaderCachingService,
+                providerAddr)
+            : orderTestDate;
+
+    var testingLabSpecimenReceivedDate =
+        StringUtils.isNotBlank(row.getSpecimenCollectionDate().getValue())
+            ? convertToZonedDateTime(
+                row.getTestingLabSpecimenReceivedDate().getValue(),
+                resultsUploaderCachingService,
+                testingLabAddr)
+            : orderTestDate;
+
+    var dateResultReleased =
+        StringUtils.isNotBlank(row.getDateResultReleased().getValue())
+            ? convertToZonedDateTime(
+                row.getDateResultReleased().getValue(),
+                resultsUploaderCachingService,
+                testingLabAddr)
+            : testResultDate;
+
     List<PhoneNumber> patientPhoneNumbers =
         StringUtils.isNotBlank(row.getPatientPhoneNumber().getValue())
             ? List.of(new PhoneNumber(PhoneType.MOBILE, row.getPatientPhoneNumber().getValue()))
@@ -187,7 +216,7 @@ public class BulkUploadResultsToFhir {
                 .phoneNumbers(patientPhoneNumbers)
                 .emails(patientEmails)
                 .gender(row.getPatientGender().getValue())
-                .dob(LocalDate.parse(row.getPatientDob().getValue(), dateTimeFormatter))
+                .dob(LocalDate.parse(row.getPatientDob().getValue(), DATE_TIME_FORMATTER))
                 .address(patientAddr)
                 .country(DEFAULT_COUNTRY)
                 .race(row.getPatientRace().getValue())
@@ -206,13 +235,13 @@ public class BulkUploadResultsToFhir {
             DEFAULT_COUNTRY);
 
     Organization orderingFacility = null;
-    if (row.getOrderingFacilityStreet().getValue() != null
-        || row.getOrderingFacilityStreet2().getValue() != null
-        || row.getOrderingFacilityCity().getValue() != null
-        || row.getOrderingFacilityState().getValue() != null
-        || row.getOrderingFacilityZipCode().getValue() != null
-        || row.getOrderingFacilityName().getValue() != null
-        || row.getOrderingFacilityPhoneNumber().getValue() != null) {
+    if (StringUtils.isNotEmpty(row.getOrderingFacilityStreet().getValue())
+        || StringUtils.isNotEmpty(row.getOrderingFacilityStreet2().getValue())
+        || StringUtils.isNotEmpty(row.getOrderingFacilityCity().getValue())
+        || StringUtils.isNotEmpty(row.getOrderingFacilityState().getValue())
+        || StringUtils.isNotEmpty(row.getOrderingFacilityZipCode().getValue())
+        || StringUtils.isNotEmpty(row.getOrderingFacilityName().getValue())
+        || StringUtils.isNotEmpty(row.getOrderingFacilityPhoneNumber().getValue())) {
       var orderingFacilityAddr =
           new StreetAddress(
               row.getOrderingFacilityStreet().getValue(),
@@ -230,6 +259,10 @@ public class BulkUploadResultsToFhir {
               null,
               orderingFacilityAddr,
               DEFAULT_COUNTRY);
+    }
+
+    if (orderingFacility == null) {
+      orderingFacility = testingLabOrg;
     }
 
     var practitioner =
@@ -255,9 +288,9 @@ public class BulkUploadResultsToFhir {
     var testPerformedCode = row.getTestPerformedCode().getValue();
     var modelName = row.getEquipmentModelName().getValue();
     var matchingDevice =
-        resultsUploaderDeviceValidationService
+        resultsUploaderCachingService
             .getModelAndTestPerformedCodeToDeviceMap()
-            .get(ResultsUploaderDeviceValidationService.getMapKey(modelName, testPerformedCode));
+            .get(ResultsUploaderCachingService.getMapKey(modelName, testPerformedCode));
 
     if (matchingDevice != null) {
       List<DeviceTypeDisease> deviceTypeDiseaseEntries =
@@ -298,12 +331,16 @@ public class BulkUploadResultsToFhir {
 
     var specimen =
         fhirConverter.convertToSpecimen(
-            getSpecimenTypeSnomed(row.getSpecimenType().getValue()),
-            getDescriptionValue(row.getSpecimenType().getValue()),
-            null,
-            null,
-            uuidGenerator.randomUUID().toString(),
-            uuidGenerator.randomUUID().toString());
+            ConvertToSpecimenProps.builder()
+                .specimenCode(getSpecimenTypeSnomed(row.getSpecimenType().getValue()))
+                .specimenName(getDescriptionValue(row.getSpecimenType().getValue()))
+                .collectionCode(null)
+                .collectionName(null)
+                .id(uuidGenerator.randomUUID().toString())
+                .identifier(uuidGenerator.randomUUID().toString())
+                .collectionDate(specimenCollectionDate)
+                .receivedTime(testingLabSpecimenReceivedDate)
+                .build());
 
     var observation =
         List.of(
@@ -322,16 +359,15 @@ public class BulkUploadResultsToFhir {
                     .testkitNameId(testKitNameId)
                     .equipmentUid(equipmentUid)
                     .deviceModel(row.getEquipmentModelName().getValue())
-                    .issued(
-                        Date.from(
-                            testResultDate.atZone(zoneIdGenerator.getSystemZoneId()).toInstant()))
+                    .issued(Date.from(testResultDate.toInstant()))
                     .build()));
 
     LocalDate symptomOnsetDate = null;
     if (row.getIllnessOnsetDate().getValue() != null
         && !row.getIllnessOnsetDate().getValue().trim().isBlank()) {
       try {
-        symptomOnsetDate = LocalDate.parse(row.getIllnessOnsetDate().getValue(), dateTimeFormatter);
+        symptomOnsetDate =
+            LocalDate.parse(row.getIllnessOnsetDate().getValue(), DATE_TIME_FORMATTER);
       } catch (DateTimeParseException e) {
         // empty values for optional fields come through as empty strings, not null
         log.error("Unable to parse date from CSV.");
@@ -350,15 +386,16 @@ public class BulkUploadResultsToFhir {
         fhirConverter.convertToServiceRequest(
             ServiceRequest.ServiceRequestStatus.COMPLETED,
             testOrderLoinc,
-            uuidGenerator.randomUUID().toString());
+            uuidGenerator.randomUUID().toString(),
+            orderTestDate);
 
     var diagnosticReport =
         fhirConverter.convertToDiagnosticReport(
             mapTestResultStatusToFhirValue(row.getTestResultStatus().getValue()),
             testPerformedCode,
             testEventId,
-            Date.from(testResultDate.atZone(zoneIdGenerator.getSystemZoneId()).toInstant()),
-            dateGenerator.newDate());
+            testResultDate,
+            dateResultReleased);
 
     return fhirConverter.createFhirBundle(
         CreateFhirBundleProps.builder()
@@ -387,7 +424,7 @@ public class BulkUploadResultsToFhir {
 
   private String getSpecimenTypeSnomed(String input) {
     if (input.matches(ALPHABET_REGEX)) {
-      return resultsUploaderDeviceValidationService
+      return resultsUploaderCachingService
           .getSpecimenTypeNameToSNOMEDMap()
           .get(input.toLowerCase());
     } else if (input.matches(SNOMED_REGEX)) {
